Bug 334765. Don't include scroll offsets in DOM element offset calculations. r+sr=bzbarsky