content/html/content/src/nsGenericHTMLElement.cpp
@@ -142,6 +142,7 @@
 #include "nsIEditor.h"
 #include "nsIEditorIMESupport.h"
 #include "nsEventDispatcher.h"
+#include "nsLayoutUtils.h"
 
 // XXX todo: add in missing out-of-memory checks
 
@@ -625,20 +626,7 @@ nsGenericHTMLElement::GetOffsetRect(nsRect& aRect, nsIContent** aOffsetParent)
   }
 
   // Get the union of all rectangles in this and continuation frames
-  nsRect rcFrame;
-  nsIFrame* next = frame;
-
-  do {
-    rcFrame.UnionRect(rcFrame, next->GetRect());
-    next = next->GetNextContinuation();
-  } while (next);
-
-  if (rcFrame.IsEmpty()) {
-    // It could happen that all the rects are empty (eg zero-width or
-    // zero-height).  In that case, use the first rect for the frame.
-    rcFrame = frame->GetRect();
-  }
-
+  nsRect rcFrame = nsLayoutUtils::GetUnionOfAllRects(frame);
   nsIContent *docElement = document->GetRootContent();
 
   // Find the frame parent whose content's tagName either matches
@@ -662,7 +650,7 @@ nsGenericHTMLElement::GetOffsetRect(nsRect& aRect, nsIContent** aOffsetParent)
     PRBool is_absolutely_positioned = PR_FALSE;
     PRBool is_positioned = PR_FALSE;
 
-    origin = frame->GetPosition();
+    origin = nsLayoutUtils::GetPositionIgnoringScrolling(frame);
 
     const nsStyleDisplay* display = frame->GetStyleDisplay();
 
@@ -698,7 +686,7 @@ nsGenericHTMLElement::GetOffsetRect(nsRect& aRect, nsIContent** aOffsetParent)
       // right coordinate system
 
       if (!is_absolutely_positioned) {
-        origin += parent->GetPosition();
+        origin += nsLayoutUtils::GetPositionIgnoringScrolling(parent);
       }
 
       content = parent->GetContent();
