layout/xul/base/src/nsBoxObject.cpp
@@ -56,6 +56,7 @@
 #include "nsIWidget.h"
 #include "nsIDOMXULElement.h"
 #include "nsIFrame.h"
+#include "nsLayoutUtils.h"
 
 // Static IIDs/CIDs. Try to minimize these.
 static NS_DEFINE_CID(kLookAndFeelCID, NS_LOOKANDFEEL_CID);
@@ -195,15 +196,10 @@ nsBoxObject::GetOffsetRect(nsRect& aRect)
   nsIFrame* frame = GetFrame(PR_TRUE);
   if (frame) {
     // Get its origin
-    nsPoint origin = frame->GetPosition();
+    nsPoint origin = nsLayoutUtils::GetPositionIgnoringScrolling(frame);
 
     // Get the union of all rectangles in this and continuation frames
-    nsRect rcFrame;
-    nsIFrame* next = frame;
-    do {
-      rcFrame.UnionRect(rcFrame, next->GetRect());
-      next = next->GetNextContinuation();
-    } while (nsnull != next);
+    nsRect rcFrame = nsLayoutUtils::GetUnionOfAllRects(frame);
         
     // Find the frame parent whose content is the document element.
     nsIContent *docElement = mContent->GetCurrentDoc()->GetRootContent();
@@ -216,7 +212,7 @@ nsBoxObject::GetOffsetRect(nsRect& aRect)
 
       // Add the parent's origin to our own to get to the
       // right coordinate system
-      origin += parent->GetPosition();
+      origin += nsLayoutUtils::GetPositionIgnoringScrolling(parent);
 
       parent = parent->GetParent();
     }
